--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Online Store</title>
     <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="font/css/all.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200&family=Montserrat&display=swap" rel="stylesheet">
+
+
 <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
