--- a/index.html
+++ b/index.html
@@ -13,7 +13,38 @@
 <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+<section>
+    <nav class="navbar navbar-expand-lg  ">
+        <a class="navbar-brand" href="#"><img src="img/logo.png" alt="img logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"> <i class="fa-solid fa-bars-staggered"></i></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+              </li>
+          </ul>
 
+        </div>
+      </nav>
+</section>
 
 
 
