--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<section>
+<section class=" sticky-top">
+ 
     <nav class="navbar navbar-expand-lg  ">
         <a class="navbar-brand" href="#"><img src="img/logo.png" alt="img logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,6 +45,16 @@
 
         </div>
       </nav>
+    
+</section>
+<section  id="hero" class="d-flex  align-items-center  align-items-start" >
+    <div class="container ">
+    <h4> Trada-in-offer</h4>
+    <h2> <strong>Super value deals </strong>    </h2>
+    <h1> <strong>On all products</strong></h1>
+    <p>Save more with coupons & upto 70% off!</p>
+    <button>Shop Now</button>
+</div>
 </section>
 
 
