--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Online Store</title>
     <link rel="stylesheet" href="css/bootstrap.css">
 <link rel="stylesheet" href="font/css/all.css">
+<link rel="stylesheet" href="js/hover.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200&family=Montserrat&display=swap" rel="stylesheet">
@@ -56,7 +57,39 @@
     <button>Shop Now</button>
 </div>
 </section>
+<section class=" features  section-p1">
+    <div class="container">
+        <div class="row   justify-content-between">
+            <div class="box    hvr-pulse-grow">
+                <img src="img/Features/f1.png" alt=" features1">
+                <h6>Free Phopping</h6>
+            </div>
+            <div class="  box    hvr-pulse-grow">
+                <img src="img/Features/f2.png" alt=" features2">
+                <h6>Online Order</h6>
+            </div>
+            <div class="  box    hvr-pulse-grow">
+                <img src="img/Features/f3.png" alt=" features3">
+                <h6>Save Money</h6>
+            </div>
+            <div class="  box    hvr-pulse-grow">
+                <img src="img/Features/f4.png" alt=" features4">
+                <h6>Promations</h6>
+            </div>
+            <div class=" box    hvr-pulse-grow">
+                <img src="img/Features/f5.png" alt=" features5">
+                <h6>Happy Sall</h6>
+            </div>
+            <div class=" box    hvr-pulse-grow">
+                <img src="img/Features/f6.png" alt=" features6">
+                <h6>F24/7Support</h6>
+            </div>
 
+        </div>
+
+    </div>
+
+</section>
 
 
     
