--- a/index.html
+++ b/index.html
@@ -90,6 +90,154 @@
     </div>
 
 </section>
+<section  class="products">
+    <div class="container">
+        <div class="row text-center part1">
+            <div class="col-12">
+                <h2> Features Products</h2>
+            </div>
+            <div class="col-12">
+                <p>Summer Collection New Moder Design </p>
+            </div>
+        </div>
+        <!-- //////{1}////// -->
+        <div class="row  part2  d-flex flex-nowrap mb-5" >
+            <div class="col-3 card  mr-3" >
+              <img src="img/pro/f1.jpg " alt="pro1"  class="card">
+              <span>adidas</span>  
+              <h5><strong> Cartoon Astronaut T-Shirts</strong></h5>  
+              <div class="star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>  
+              <div class="price d-flex justify-content-between p-3">
+                <h4> <strong> $78</strong> </h4>
+                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+              </div>
+            </div>
+            <div class="col-3 card  mr-3" >
+                <img src="img/pro/f2.jpg " alt="pro1"  class="card">
+                <span>adidas</span>  
+                <h5><strong> Cartoon Astronaut T-Shirts</strong></h5>  
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>  
+                <div class="price d-flex justify-content-between p-3">
+                  <h4> <strong> $78</strong> </h4>
+                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+              </div>
+              <div class="col-3 card  mr-3" >
+                <img src="img/pro/f3.jpg " alt="pro1"  class="card">
+                <span>adidas</span>  
+                <h5><strong> Cartoon Astronaut T-Shirts</strong></h5>  
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>  
+                <div class="price d-flex justify-content-between p-3">
+                  <h4> <strong> $78</strong> </h4>
+                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+              </div>
+              <div class="col-3 card  mr-3" >
+                <img src="img/pro/f4.jpg " alt="pro1"  class="card">
+                <span>adidas</span>  
+                <h5><strong> Cartoon Astronaut T-Shirts</strong></h5>  
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>  
+                <div class="price d-flex justify-content-between p-3">
+                  <h4> <strong> $78</strong> </h4>
+                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+              </div>
+
+        </div>
+        <!-- ///{2}/// -->
+        <div class="row  part2  d-flex flex-nowrap mb-5" >
+            <div class="col-3 card  mr-3" >
+              <img src="img/pro/f5.jpg " alt="pro1"  class="card">
+              <span>adidas</span>  
+              <h5><strong> Cartoon Astronaut T-Shirts</strong></h5>  
+              <div class="star">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </div>  
+              <div class="price d-flex justify-content-between p-3">
+                <h4> <strong> $78</strong> </h4>
+                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+              </div>
+            </div>
+            <div class="col-3 card  mr-3" >
+                <img src="img/pro/f6.jpg " alt="pro1"  class="card">
+                <span>adidas</span>  
+                <h5><strong> Cartoon Astronaut T-Shirts</strong></h5>  
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>  
+                <div class="price d-flex justify-content-between p-3">
+                  <h4> <strong> $78</strong> </h4>
+                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+              </div>
+              <div class="col-3 card  mr-3" >
+                <img src="img/pro/f7.jpg " alt="pro1"  class="card">
+                <span>adidas</span>  
+                <h5><strong> Cartoon Astronaut T-Shirts</strong></h5>  
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>  
+                <div class="price d-flex justify-content-between p-3">
+                  <h4> <strong> $78</strong> </h4>
+                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+              </div>
+              <div class="col-3 card  mr-3" >
+                <img src="img/pro/f8.jpg " alt="pro1"  class="card">
+                <span>adidas</span>  
+                <h5><strong> Cartoon Astronaut T-Shirts</strong></h5>  
+                <div class="star">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                </div>  
+                <div class="price d-flex justify-content-between p-3">
+                  <h4> <strong> $78</strong> </h4>
+                  <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                </div>
+              </div>
+
+        </div>
+    </div>
+</section>
 
 
     
