--- a/index.html
+++ b/index.html
@@ -238,12 +238,13 @@
         </div>
     </div>
 </section>
-<section class="banner">
+<section class="banner   text-center">
+    <div class="container">
     <h4> Repair Services</h4>
     <h1> <strong> Up To <span> 70% Off</span>-All t-shirt$ Accessories</strong></h1>
     <button class="btn">Explore More</button>
 
-
+</div>
 </section>
 
     
