--- a/index.html
+++ b/index.html
@@ -438,7 +438,24 @@
         </div>
     </div>
 </section>
-
+<section class="before-footer  ">
+  <div class="container">
+    <div class="row">
+      <div class="col-6" style="padding-left: 0px;">
+       <h3> SignUp For Newsletters</h3>  
+       <p> Get E-mail updatas about our latest shop and <span>Special offers</span></p>
+      </div>
+      <div class="col-6" style="padding-right: 0px;">
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="Your e-mail address" aria-label="Recipient's username" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
         
 
