--- a/index.html
+++ b/index.html
@@ -57,39 +57,47 @@
     <button>Shop Now</button>
 </div>
 </section>
+
+<!-- ////// -->
+
+
 <section class=" features  section-p1">
-    <div class="container">
-        <div class="row   justify-content-between">
-            <div class="box    hvr-pulse-grow">
-                <img src="img/Features/f1.png" alt=" features1">
-                <h6>Free Phopping</h6>
-            </div>
-            <div class="  box    hvr-pulse-grow">
-                <img src="img/Features/f2.png" alt=" features2">
-                <h6>Online Order</h6>
-            </div>
-            <div class="  box    hvr-pulse-grow">
-                <img src="img/Features/f3.png" alt=" features3">
-                <h6>Save Money</h6>
-            </div>
-            <div class="  box    hvr-pulse-grow">
-                <img src="img/Features/f4.png" alt=" features4">
-                <h6>Promations</h6>
-            </div>
-            <div class=" box    hvr-pulse-grow">
-                <img src="img/Features/f5.png" alt=" features5">
-                <h6>Happy Sall</h6>
-            </div>
-            <div class=" box    hvr-pulse-grow">
-                <img src="img/Features/f6.png" alt=" features6">
-                <h6>F24/7Support</h6>
-            </div>
 
-        </div>
+      <div class="row  d-flex flex-nowrap ">
+          <div class=" col-l box    hvr-pulse-grow " style="margin-right: 10px;">
+              <img src="img/Features/f1.png" alt=" features1">
+              <h6>Free Phopping</h6>
+          </div>
+          <div class=" col-l box    hvr-pulse-grow " style="margin-right: 10px;">
+              <img src="img/Features/f2.png" alt=" features2">
+              <h6>Online Order</h6>
+          </div>
+          <div class=" col-l box    hvr-pulse-grow  " style="margin-right: 10px;">
+              <img src="img/Features/f3.png" alt=" features3">
+              <h6>Save Money</h6>
+          </div>
+          <div class=" col-l box    hvr-pulse-grow " style="margin-right: 10px;">
+              <img src="img/Features/f4.png" alt=" features4">
+              <h6>Promations</h6>
+          </div>
+          <div class="col-l box    hvr-pulse-grow" style="margin-right: 10px;">
+              <img src="img/Features/f5.png" alt=" features5">
+              <h6>Happy Sall</h6>
+          </div>
+          <div class=" col-l box    hvr-pulse-grow">
+              <img src="img/Features/f6.png" alt=" features6">
+              <h6>F24/7Support</h6>
+          </div>
 
-    </div>
+      </div>
+
+ 
 
 </section>
+
+
+
+<!-- //// -->
 <section  class="products">
     <div class="container">
         <div class="row text-center part1">
@@ -457,6 +465,130 @@
   </div>
 </section>
 
+
+
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-white text-muted">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block part_sec">
+      <span>Get connected with us on social networks:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div class="fontss mb-3">
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class=" end ">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3  text-justify">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4 ">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3 text-secondary"></i>Company name
+          </h6>
+          <p >
+            On this site, we show you some of our products in an easy and smooth way that suits you!!What are you waiting for...?
+          </p>
+          <img src="img/pay/pay.png">
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Products
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Shein</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">H&m</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">adidas</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Bershka</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 as">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Useful links
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Pricing</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Settings</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Orders</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Help</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" >
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p>
+            <i class="fas fa-envelope me-3  "></i>
+            info@example.com
+          </p>
+          <p><i class="fas fa-phone me-3 "></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print me-3 "></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
         
 
 
