--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,19 @@
     
 
 </section>
+<section id="blog">
+<div class="blog-box">
+    <div class="blog-img">
+        <img src="img/blog/b1 (1).jpg">
+    </div>
+    <div class="blog-detiles">
+        <h4> Koton | Neck Detailed Blouse</h4>
+        <p> Product details Crew Neck, Sleeveless Blouse Material: 100% PolyesterModel Size Information:Height: 179 cm,&nbsp;Breast: 80,&nbsp;Waist: 61,&nbsp;Hip: 88Model Size: 36HELPCan we help you?Here we answer all your questions about our online s service.Customer Service Phone: 0850 208 71 71E-Mail:mim@koton.comOur call center is open Monday to Sunday from 08.00 to 22.00.</p>
+   <a href="#">Continue Reading</a>
+    </div>
+    <h1> 13/01</h1>
+</div>
+</section>
 
 
         
