--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,64 @@
     </div>
     <div class="blog-detiles">
         <h4> Koton | Neck Detailed Blouse</h4>
-        <p> Product details Crew Neck, Sleeveless Blouse Material: 100% PolyesterModel Size Information:Height: 179 cm,&nbsp;Breast: 80,&nbsp;Waist: 61,&nbsp;Hip: 88Model Size: 36HELPCan we help you?Here we answer all your questions about our online s service.Customer Service Phone: 0850 208 71 71E-Mail:mim@koton.comOur call center is open Monday to Sunday from 08.00 to 22.00.</p>
+        <p> Product details Crew Neck, Sleeveless Blouse Material: 100% PolyesterModel 36HELPCan we help you?Here  questions our online s service.Customer Service Phone: 0850 208 71 71E-Mail:mim@koton.comOur call center is open Monday to Sunday from 08.00 to 22.00.</p>
+   <a href="#">Continue Reading</a>
+    </div>
+    <h1> 13/01</h1>
+</div>
+<div class="blog-box">
+    <div class="blog-img">
+        <img src="img/blog/b2.jpg">
+    </div>
+    <div class="blog-detiles">
+        <h4>Koton | Letter Printed Sweatshirt</h4>
+        <p>Bebe Women's Star Lace Midi Slip Dress
+            bebe missy lavender multi colored star lace slip dress Color: Lavender Multi 70% Polyester, 20% Rayon, 10% Metal Fiber (Metal) Imported Zipper closure Dry Clean Only  Slip dress Multi colored</p>
+   <a href="#">Continue Reading</a>
+    </div>
+    <h1> 13/01</h1>
+</div>
+<div class="blog-box">
+    <div class="blog-img">
+        <img src="img/blog/b3.jpg">
+    </div>
+    <div class="blog-detiles">
+        <h4>SHEIN | Men Destroyed Plain Jeans</h4>
+        <p> Product details Spaghetti Strap, &nbsp;Waist: 60,&nbsp;Hip: 91Model Size: 36  all your questions about our online s service. Customer Service Phone: 0850 208 71 71 E-Mail: mim@koton.com Our call center is open Monday to Sunday from 08.00 to 22.00.</p>
+   <a href="#">Continue Reading</a>
+    </div>
+    <h1> 13/01</h1>
+</div>
+<div class="blog-box">
+    <div class="blog-img">
+        <img src="img/blog/b4.jpg">
+    </div>
+    <div class="blog-detiles">
+        <h4>Boohoo UK | Oversized Long Sleeve Spliced</h4>
+        <p> Product details Crew Neck, Sleeveless Breast: 80,&nbsp;Waist: 61,&nbsp;Hip:we help you?Here we answer all from 08.00 to 22.00.</p>
+   <a href="#">Continue Reading</a>
+    </div>
+    <h1> 13/01</h1>
+</div>
+<div class="blog-box">
+    <div class="blog-img">
+        <img src="img/blog/b5.jpg">
+    </div>
+    <div class="blog-detiles">
+        <h4>Koton | Patterned Dress</h4>
+        <p>Product details V Neck, Short Sleeve, Midi,Height: 178 cm,&nbsp;Breast:90Model Size: 36HELPCan we help you?Here we answer all your questions about our online s service.Customer Service Phone: 0850 208 71 71E-Mail:mim@koton.comOur call center is open Monday to Sunday from 08.00 to 22.00.</p>
+   <a href="#">Continue Reading</a>
+    </div>
+    <h1> 13/01</h1>
+</div>
+<div class="blog-box">
+    <div class="blog-img">
+        <img src="img/blog/b7.jpg">
+    </div>
+    <div class="blog-detiles">
+        <h4>Donna Ricco | Lace Trim Sweetheart Neck Fit & Flare Dress </h4>
+        <p>Donna Ricco | Lace Trim Sweetheart Neck Fit & Flare Dress DR30919
+            35" length Hidden back-zip closure Sweetheart neck Sleeveless Lined 95% polyester, 5% spandex Hand wash, line dry Imported Dresses</p>
    <a href="#">Continue Reading</a>
     </div>
     <h1> 13/01</h1>
