--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
   <li  ><a href="index.html"  > Home</a></li>
   <li><a href="shop.html" class="active" >Shop</a></li>
   <li><a href="blog.html">Blog</a></li>
-  <li><a href="#">About</a></li>
+  <li><a href="about.html">About</a></li>
   <li><a href="#">Contact</a></li>
   <li id="lg-bag"><a href="#"  ><i class="fa-solid fa-bag-shopping "></i></a></li>
   <a  href="#" id="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
