--- a/SingleProducts.html
+++ b/SingleProducts.html
@@ -70,7 +70,7 @@
     <option>MD</option>
     <option>S</option>
   </select>
-<input type="number" value="1">
+<input type="number" value="1"   min="1" max="100">
 <button class="btn">Add To Cart</button>
 <h4> Products details</h4>
 <span>
