--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,47 @@
         loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
+<!-- info -->
+<section id="form-detiles">
+    <form action="">
+        <span> LEAVE A  NESSAGE</span>
+        <h2>We love to hear from you </h2>
+        <input type="text" class="form-control" placeholder="Enter Your Name ">
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Email">
+        <input type="text" class="form-control"  placeholder="Subject">
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="10" cols="30"  placeholder="Your Message"></textarea>
+<button type="submit" class="btn">Submit</button>
+    </form>
+
+    <div class="people">
+        <div>
+        <img src="img/people/1.png">
+        <p>
+            <span> Johan deal</span> Senior Markting manager<br>Phone: +915 987 356 45
+            <br>Email: Johan33 deal@example.com
+        </p>
+        </div>
+        <div>
+            <img src="img/people/2.png">
+            <p>
+                <span> willes adim</span>Project manager<br>Phone: +910 098 356 23
+                <br>Email:wille88ad@example.com
+            </p>
+            </div>
+            <div>
+                <img src="img/people/3.png">
+                <p>
+                    <span> sara nashat</span>Full-Stack Developer<br>Phone: +023 987 877 45
+                    <br>Email: sara77nashat77@gmail.com
+                </p>
+                </div>
+    </div>
+
+</section>
+
+
+
+
 
     <!-- news -->
         <!-- before footer -->
