--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div id="mobile">
 
-<a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+<a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
 <i id="bar" class="fas fa-outdent"></i> 
 </div>
 
