--- a/SingleProducts.html
+++ b/SingleProducts.html
@@ -30,7 +30,7 @@
 
 <div id="mobile">
 
-<a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+<a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
 <i id="bar" class="fas fa-outdent"></i> 
 </div>
 
@@ -71,7 +71,7 @@
     <option>S</option>
   </select>
 <input type="number" value="1"   min="1" max="100">
-<button class="btn">Add To Cart</button>
+<button class="btn bbtn1" >Add To Cart</button>
 <h4> Products details</h4>
 <span>
   We use functional tracking to analyse how our website is being used. This data helps us to discover errors and develop new designs. It also allows us to test the effectiveness of our website. Furthermore, these cookies provide insights for advertising analysis and affiliate marketing.
