--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
 <div id="mobile">
 
-<a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+<a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a>
 <i id="bar" class="fas fa-outdent"></i> 
 </div>
 
