--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
   <li><a href="about.html">About</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li id="lg-bag"><a href="cart.html"  ><i class="fa-solid fa-bag-shopping "></i></a></li>
-  <a  href="#" id="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
+  <a  href="cart.html" id="close"><i class="fa-regular fa-rectangle-xmark"></i></a>
 </ul>
 </div>
 
